# AIEngineeringAgenticTrackTheCompleteAgentsCourse

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  Day2 Agent vs Workflow patterns.md  Day2 LLM Workflows.md  Day4 Resoures vs Tools.md
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py  research_manager.py
3_crew/: README.md
3_crew/coder/: pyproject.toml  series_calculation_output.txt
3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py  main.py
3_crew/debate/: pyproject.toml
3_crew/debate/src/debate/: crew.py  main.py
3_crew/engineering_team/: pyproject.toml
3_crew/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineering_team/src/engineering_team/: crew.py  main.py
3_crew/engineering_team/src/engineering_team/config/: agents.yaml
3_crew/financial_researcher/: .gitignore  pyproject.toml
3_crew/financial_researcher/src/financial_researcher/: crew.py  main.py
3_crew/stock_picker/: pyproject.toml
3_crew/stock_picker/src/stock_picker/: crew.py  main.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  sidekick_tools.py
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  README.md  agent.py  creator.py
5_autogen/mcp_fetch_docker/: Dockerfile  README.md  docker-compose.yml
6_mcp/: .gitignore  1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  README.md  market.py
ollama/: .gitignore  README.md  docker-compose.yml
