[project]
name = "ai-engineering-agentic-track"
version = "0.1.0"
description = "Course on Agent Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.6.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.4.0",
    "openai>=2.21.0",
    "pdfreader>=0.1.15",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
