[project]
name = "ai-engineering-agentic-track"
version = "0.1.0"
description = "Course on Agent Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext[ollama]>=0.7.5",
    "beautifulsoup4>=4.14.3",
    "gradio>=6.6.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.4.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "lxml>=6.0.2",
    "openai>=2.21.0",
    "openai-agents>=0.10.0",
    "pdfreader>=0.1.15",
    "playwright>=1.58.0",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
